--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <b>hi</b>
 <u>fall 2018</u>
 <a href="https://www.netflix.com">netflix</a>
-img src="https://www.pexels.com/photo/scenic-view-of-beach-248797/" alt="beach" style="width:200px;height:200px;"
+  <p><img src="https://www.pexels.com/photo/scenic-view-of-beach-248797/" alt="beach" style="width:200px;height:200px;"></p>
  </body>
 </html>
