--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <a href="https://www.netflix.com">netflix</a>
   <p><img src="https://www.pexels.com/photo/scenic-view-of-beach-248797/" alt="beach" style="width:200px;height:200px;"></p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/xVSKsMq-JOE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+ <font color="blue"> blue!</font>
+  <body bgcolor="edfffe">
+   <button>Click me</button>
+   <ul>
+  <li>Thrive</li>
+  <li>Sleep</li>
+  <li>Repeat</li>
+</ul>
  </body>
 </html>
